@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2009-05-13 Warren L. DeLano <warren@delsci.com>	
+
+	* fixed bug with names containing 'model' in selection macros
+	
 2009-05-11 Warren L. DeLano <warren@delsci.com>	
 
 	* experimental movie_panel setting
